--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="project_foto/nature/nature1.jpg" alt="First slide">
+                        <img class="d-block w-100" src="img/nature/nature1.jpg" alt="First slide">
                         <div class="carousel-caption d-none d-md-block" style="margin-bottom: 450px;">
                             <h2 class="text-uppercase" style="color: black;"><u>All About A Story</u></h2>
                             <p class="p" style="color: black; margin-left: 550px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="project_foto/nature/nature2.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="img/nature/nature2.jpg" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h2 class="text-uppercase text-center" style="color: black; margin-bottom: 10px;"><u>A Story in Pictures</u></h2>
                             <p class="p1" style="color: black; margin-right: 330px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="project_foto/nature/nature3.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="img/nature/nature3.jpg" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h2 class="text-uppercase text-center" style="color: black; margin-bottom: 20px; margin-right: 330px;"><u>Pictures have a Mean</u></h2>
                             <p class="p2" style="color: black; margin-right: 500px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
