--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <h3 style="color: white; margin-top: -80px; margin-bottom: 30px;"><u><strong>About Me</strong></u></h3>
                                 <div class="container">
                                     <div class="row">
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 img-not">
                                             <img src="img/DJI_0045.jpg" width="100%">
                                         </div>
                                         <div class="col-md-6">
