--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Final Project - Still Only For Desktop</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/fullpage.css">
 	<link rel="stylesheet" type="text/css" href="css/examples.css">
